FIND_PACKAGE(Threads REQUIRED)

set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)
SET(Boost_USE_STATIC_LIBS ON)

find_package (Boost ${BOOST_VERSION} EXACT REQUIRED COMPONENTS ${BOOST_LIBRARIES})

include_directories(${Boost_INCLUDE_DIRS})

MESSAGE(STATUS "Found Boost libraries ${Boost_INCLUDE_DIRS}")

ADD_DEFINITIONS(-DBOOST_THREAD_VERSION=4
                -DBOOST_THREAD_DONT_PROVIDE_FUTURE)
REMOVE_DEFINITIONS(-DBOOST_NO_EXCEPTIONS)

add_subdirectory(anubis)
add_subdirectory(exe)